ajustes para que tome ruta sql y ruta de inicio sesion